Edited userscripts-org data and description slightly.

--- a/userscripts-org/metadata.yml
+++ b/userscripts-org/metadata.yml
@@ -4,7 +4,7 @@ UserscriptMetadata:
     License:            "MIT License"
     Markdown:           "true"
     Description:        "description.md"
-    ScriptHomepage:     ""
-    RemoteLocation:     ""
+    ScriptHomepage:     "https://github.com/philippwiddra/lol-forum-enhance"
+    RemoteLocation:     "https://github.com/philippwiddra/lol-forum-enhance/raw/master/client/forum-icons.user.js"
     Screenshots:        ""
     Icons:              ""
