Added client- and serverside SummonerIcons; modified .gitignore so they don't mess in the repo.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ server/SummonerIcons/*.jpg
 server/SummonerIcons/*.png
 server/SummonerIcons/*.gif
 server/SummonerIcons/*.bmp
+
+client/SummonerIcons/*.jpg
+client/SummonerIcons/*.png
+client/SummonerIcons/*.gif
+client/SummonerIcons/*.bmp
