Some further cleanup for SummonerIcons folders. (got rid of windows Thumbs.db files)

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,10 @@ server/SummonerIcons/*.jpg
 server/SummonerIcons/*.png
 server/SummonerIcons/*.gif
 server/SummonerIcons/*.bmp
+server/SummonerIcons/Thumbs.db
 
 client/SummonerIcons/*.jpg
 client/SummonerIcons/*.png
 client/SummonerIcons/*.gif
 client/SummonerIcons/*.bmp
+client/SummonerIcons/Thumbs.db
