--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ client/SummonerIcons/*.png
 client/SummonerIcons/*.gif
 client/SummonerIcons/*.bmp
 client/SummonerIcons/Thumbs.db
+
+client/bootstrap/img/Thumbs.db
