League forums colorfix initial commit
colorfix.css added; colorfix.css refactured to less; compiled and minified; notes updated about using greasemonkey asset images in css

--- a/lol-forum-enhance.csproj
+++ b/lol-forum-enhance.csproj
@@ -449,6 +449,7 @@
     <Content Include="client\flaviusmatis\easyModal\README.md" />
     <Content Include="client\global.less" />
     <Content Include="client\less\glyphicons.less" />
+    <Content Include="client\less\colorfix.less" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
